# GEECS-Plugins

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUDIT_BLOCK1.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  REFACTOR_RECON.md  ROADMAP.md  Untitled.ipynb  conftest.py  mkdocs.yml  pyproject.toml
ConfigManager/: README.md  pyproject.toml
ConfigManager/config_manager/: __init__.py  __main__.py  introspect.py  main_window.py  widgets.py
GEECS-Console/: CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
GEECS-Console/geecs_console/: __init__.py  events_adapter.py  request_builder.py  submission.py  version.py
GEECS-Console/scripts/: generate_browser_screen_map.py  generate_screen_map.py
GEECS-Console/tests/: conftest.py  fake_catalog.py  fake_events.py  test_action_library_editor.py  test_action_library_store.py  test_actions_menu.py  test_browser_entry_point.py  test_browser_scan_folder.py  test_configs_optimization.py  test_device_panel.py  test_events_adapter.py  test_experiment_name_validation.py  test_health.py  test_main_window.py  test_main_window_editors_integration.py  test_movable_panel.py  test_no_geecs_python_api.py  test_ops_paths.py  test_optimization_loader.py  test_optimization_warmup.py  test_presets.py  test_request_builder.py  test_save_set_editor.py  test_save_set_store.py  test_scan_browser_window.py  test_scan_variable_editor.py  test_scan_variable_store.py  test_settings.py  test_shot_control_editor.py  test_tooltips.py  test_trigger_profile_store.py  test_version.py
GEECS-Data-Utils/: CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
GEECS-Data-Utils/Geecs-Paths-Utils/: pyproject.toml
GEECS-Data-Utils/Geecs-ScanData-Utils/: pyproject.toml
GEECS-Data-Utils/geecs_data_utils/: __init__.py  config_base.py  config_roots.py  doc_id_lookup.py  geecs_paths_config.py  native_files.py  plotting_utils.py  scan_data.py  scan_log_loader.py  scan_paths.py  tiled_catalog.py  tiled_drift.py  tiled_export.py  tiled_schema.py  type_defs.py  utils.py
GEECS-Data-Utils/tests/: conftest.py  test_builder.py  test_columns.py  test_config_roots.py  test_correlation.py  test_data_dataset.py  test_dataset.py  test_feature_selection.py  test_geecs_paths_config.py  test_inference.py  test_io_images.py  test_ml_integration.py  test_models.py  test_native_files.py  test_outliers.py  test_persistence.py  test_scan_data_column_resolution.py  test_scan_log_loader.py  test_scan_paths_create_invariant.py  test_tiled_catalog.py  test_tiled_drift.py  test_tiled_export.py  test_tiled_schema.py  test_utils.py
GEECS-FileDirectory/: README.md  pyproject.toml
GEECS-FileDirectory/geecs_file_directory/: api_defs.py  geecs_errors.py  scan_data.py  tdms.py  utils.py
GEECS-LogTriage/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
GEECS-LogTriage/geecs_log_triage/: __init__.py  classifier.py  cli.py  fingerprint.py  harvester.py  parser.py  render.py  schemas.py
GEECS-LogTriage/tests/: test_classifier.py  test_fingerprint.py  test_harvester_paths.py  test_parser.py
GEECS-PythonAPI/: CHANGELOG.md  GEECS-Plugins - Shortcut.lnk  GEECSPythonAPI.py  GEECSexampleSetandGet.ipynb  GeecsApiExamples-ajg.ipynb  HTU_config.yaml  Hexapod testing Script.ipynb  PWfocusLpMode.yaml  README.md  Test optimization 20230323.ipynb  Untitled.ipynb  example-Copy1.ipynb  example.ipynb  pyproject.toml
GEECS-PythonAPI/.ipynb_checkpoints/: GEECS example send command to device-checkpoint.ipynb  GEECSPythonAPI-checkpoint.py  GEECSexampleSetandGet-checkpoint.ipynb  HTU S3 S4 scan-checkpoint.ipynb  PWfocusLpMode-checkpoint.yaml  Test optimization 20230323-checkpoint.ipynb  degauss-checkpoint.ipynb  example-Copy1-checkpoint.ipynb  example-checkpoint.ipynb  example2-checkpoint.ipynb  examplearchivedfromPW-checkpoint.ipynb  plunger scan-checkpoint.ipynb
GEECS-PythonAPI/PW_scripts/: Camera centroid average.ipynb  FindHPDFocus.ipynb  PW_pythonAPI_test.ipynb  SimCamXopt.ipynb  Untitled1.ipynb  bayes.yaml  geecs_env.yml  software_interlock_test.ipynb  xoptAlignBesselHexapod.ipynb
GEECS-PythonAPI/Spot Analysis/: README  ni_vision.py
GEECS-PythonAPI/chris_tests/: EnergyAxisInvestigation.py  Test_Multi-Inequality.py  Test_TDMSWriter.py
GEECS-PythonAPI/geecs_api/: api_defs.py
GEECS-PythonAPI/geecs_interface/: tcp_client.py
GEECS-PythonAPI/geecs_python_api/: __init__.py
GEECS-PythonAPI/htu_scripts/: 230419_uc_undulatorrad2_analysis.py  HTU_tests.py  background_cameras.py  bayes.yaml  camera_backgrounds.py  copty xopt nelder mead simulated hexapod alignment.ipynb  dump.yaml  lv_decompression.py  (+6 more)
GEECS-Scanner-GUI/: CHANGELOG.md  CLAUDE.md  GEECSScanner.py  GEECSScanner.ui  GEECSScanner_ui.py  GEECS_Scanner.sh  GEECS_Scanner_PW.sh  LogStream.py  MultiScanner.py  MultiScanner.ui  MultiScanner_ui.py  README.md  RunControl.py  ScanElementEditor.py  ScanElementEditor.ui  ScanElementEditor_ui.py  ShotControlEditor.py  ShotControlEditor.ui  ShotControlEditor_ui.py  action_control.py  build_exe.sh  main.py  multiscan_sound_player.py  pyproject.toml  run_control.py
GEECS-Schemas/: CHANGELOG.md  README.md  pyproject.toml
GeecsBluesky/: CHANGELOG.md  CLAUDE.md  EVENT_SCHEMA.md  README.md  ROADMAP.md  SANDBOX.md  TILED_SETUP.md  pyproject.toml  test_bluesky_scanner.py  test_hardware.py  test_scanner_bridge.py
GeecsCAGateway/: CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  PV_CONTRACT.md  README.md  pyproject.toml
Grenouille/: grenouille_analysis.py  pyproject.toml
ImageAnalysis/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
LivePostProcessing/: .gitignore  logging_config.json  pyproject.toml
LogMaker4GoogleDocs/: CHANGELOG.md  CLAUDE.md  experiment logger - kHz.sh  pyproject.toml  readme.md
PhasicsDensity/: phasics_density_analysis.py  pyproject.toml  requirements.txt
ScanAnalysis/: CHANGELOG.md  CLAUDE.md  README.md  ScAnalyzer.sh  ScAnalyzer_ui.py  backtest_gdoc_upload.py  logging_config.json  pyproject.toml
khzwave_python-master/: .gitignore  README.md  dd.py  make_deps.bat  make_docs.bat  make_docs.sh  setup.cfg
(+2639 files in other folders)
