[tool.poetry]
name = "geecs-docs"
version = "0.1.0"
description = "Unified documentation for GEECS plugins"
authors = ["Sam Barber <sbarber@lbl.gov>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mkdocs = "^1.5"
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = "^0.28.2" }
mkdocs-autorefs = "^1.4"
mkdocs-git-revision-date-localized-plugin = "^1.2"  # "Last updated" footer per page
nbconvert = "^7.0"  # Needed for Jupyter notebook output stripping
tomli = "^2.2.1"
# Pin griffe <2.0 until mkdocstrings + mkdocstrings-python both reach the
# 2.x line that supports griffe 2.x. The currently-pinned mkdocstrings
# (^0.28.2) pulls in mkdocstrings-python 1.16.x, which does
# ``from griffe import Alias`` — gone in griffe 2.0, so the build dies
# with ``ImportError: cannot import name 'Alias' from 'griffe'``.
# Drop this pin when bumping mkdocstrings to ^0.29 / ^1.0 as a follow-up.
griffe = "<2.0"

[tool.poetry.group.dev.dependencies]
geecs-scanner-gui = { path = "GEECS-Scanner-GUI", develop = true }
geecs-pythonapi = {path = "GEECS-PythonAPI", develop = true}
imageanalysis = { path = "ImageAnalysis", develop = true }
geecs_data_utils = { path = "GEECS-Data-Utils", develop = true, extras = ["ml"] }
geecs-schemas = { path = "GEECS-Schemas", develop = true }
scananalysis = {path = "ScanAnalysis", develop = true}
LogMaker4GoogleDocs = {path = "LogMaker4GoogleDocs", develop = true}

pre-commit = "^3.5"
ruff = "^0.4"  # Use compatible version with ruff-pre-commit
pydocstyle = "^6.3"
interrogate = "^1.7"  # For docstring coverage reporting

pytest = ">=8.1"  # importlib import-mode only adds rootdirs to sys.path from 8.1 (tests.* imports)
pytest-asyncio = ">=0.23"  # GeecsBluesky async suites in the integrated env
pytest-timeout = ">=2.4"

jupyterlab = "^4.0"
mkdocs-jupyter = "^0.24.6"  # or latest version
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------------
# Pytest settings
# -------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "ImageAnalysis/tests", "ScanAnalysis/tests", "GEECS-Data-Utils/tests", "GEECS-Schemas/tests"]
# importlib import mode avoids collisions between identically-named test
# directories across subpackages (e.g. ImageAnalysis/tests/conftest.py and
# GEECS-Data-Utils/tests/conftest.py both being imported as
# `tests.conftest` under pytest's default rootdir-prepend mode).
addopts = "--import-mode=importlib"
markers = [
    "integration: requires external resources (data or hardware) — skipped in CI",
    "data: requires network-mounted GEECS data (combine with integration)",
    "hardware: requires live GEECS devices (combine with integration)",
    "fake_server: uses local FakeGeecsServer TCP/UDP sockets; CI-safe but not pure unit",
    "gui: requires a display and Qt — skipped in headless CI",
]
# Exclude pre-existing test stubs that require optional/unavailable deps
norecursedirs = [
    "tests/ScannerTools",
    ".git", ".venv", "dist", "build", "__pycache__",
]

# -------------------------------
# Ruff settings
# -------------------------------
[tool.ruff]
exclude = ["extras/**", "**/third_party_sdks/**", "**/.ipynb_checkpoints/**"]

[tool.ruff.lint]
ignore = ["D100", "D104", "D401"]  # Allow missing module/package docstrings and imperative mood
extend-select = ["D"]  # Enable all pydocstyle checks

[tool.ruff.lint.per-file-ignores]
"extras/**" = ["D"]
"**/third_party_sdks/**" = ["D"]
"**/tests/**" = ["D"]  # Ignore all docstring rules in test files
# Legacy trees exempt from lint debt until their proper audit/cleanup
# (owner decision on PR #574, 2026-07-16). Only the pre-existing debt
# categories are exempted; syntax/undefined-name checks stay active.
"GEECS-Scanner-GUI/geecs_scanner/app/**" = ["D"]
# The one pre-existing F841 in the tree — keep F841 live elsewhere in app/,
# geecs_scanner.py and run_control.py still see active development:
"GEECS-Scanner-GUI/geecs_scanner/app/save_element_editor.py" = ["D", "F841"]
# The app package's __init__ re-exports (public API of the legacy GUI):
"GEECS-Scanner-GUI/geecs_scanner/app/**/__init__.py" = ["F401"]
"GEECS-Scanner-GUI/geecs_scanner/utils/convert_png_to_ico.py" = ["D"]
"LogMaker4GoogleDocs/**" = ["D", "E711", "E712", "E722"]
"GEECS-PythonAPI/**/*.ipynb" = ["D", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# -------------------------------
# Interrogate settings (doc coverage checker)
# -------------------------------
[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
verbose = 2
exclude = [
    "setup.py", "docs", "tests", "**/tests/**", "**/test_*.py", "**/*_test.py", "**/conftest.py",
    "**/third_party_sdks/**",
    "**/extras/**"
]

# -------------------------------
# Pydocstyle settings
# -------------------------------
[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104"]
match-dir = "^(?!extras/|.*third_party_sdks).*"
