[tool.poetry]
name = "geecs-console"
version = "0.8.0"
description = "Greenfield PySide6 operator console for GEECS (Bluesky/gateway architecture)"
authors = ["Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
packages = [{ include = "geecs_console" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = ">=6.7"

# The scan engine: BlueskyScanner (the Submitter), the ScanEvent vocabulary,
# configs-repo resolution.  Path-dep pattern mirrors GEECS-Scanner-GUI's.
geecs-bluesky = { path = "../GeecsBluesky", develop = true, extras = ["tiled", "ca"] }

# The config vocabulary: ScanRequest is the one submission object this GUI
# builds.  Pydantic-only — the request builder imports nothing heavier.
geecs-schemas = { path = "../GEECS-Schemas", develop = true }

# The Xopt/evaluator optimization stack (geecs_scanner.optimization) — the
# ONLY reason the legacy package appears here, and only as the opt-in
# `optimization` extra: it drags the legacy dependency tree into the
# install.  The console imports nothing else from it (the import lives in
# services/optimization.py alone, lazy and availability-gated); without the
# extra, optimize-mode submissions are refused by the engine and every
# other mode is unaffected.  Slated for deletion when the redesigned
# optimization hook (bluesky-adaptive direction) replaces the stack.
geecs-scanner-gui = { path = "../GEECS-Scanner-GUI", develop = true, optional = true }

[tool.poetry.extras]
optimization = ["geecs-scanner-gui"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-qt = ">=4.4"
ruff = ">=0.9"
pydocstyle = ">=6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
