[tool.poetry]
name = "geecs_file_directory"
version = "0.1.0"
description = ""
authors = ["Christopher Doss <CEDoss@lbl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# numeric libraries
numpy = "^1.21"
nptdms = "^1.7.0"
pandas = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
