[tool.poetry]
name = "geecs-pythonapi"
version = "0.1.0"
description = "Python interface to GEECS control system"
authors = ["Guillaume Plateau <guillaume.plateau@tausystems.com>"]
readme = "README.md"
packages = [{include = "geecs_pythonapi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.21"
pandas = "^1.4"
matplotlib = "^3.7.2"
scipy = "~1.9"
nptdms = "^1.7.0"
scikit-image = "^0.19.0"
opencv-python = "~4.7"
pypng = "^0.20220715.0"
python-dotenv = "^1.0.0"
progressbar2 = "^4.2.0"
xopt = "^1.4.1"
mysql-connector = "^2.2.9"
screeninfo = "^0.8.1"

# phasicsdensity = {path = "../PhasicsDensity/", develop = true}

[tool.poetry.group.dev.dependencies]
spyder-kernels = ">=2.4.0,<2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
