[tool.poetry]
name = "geecs-pythonapi"
version = "0.3.0"
description = "Python interface to GEECS control system"
authors = ["Guillaume Plateau <guillaume.plateau@tausystems.com>", "Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
packages = [{include = "geecs_python_api"},
            {include = "labview_interface"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# numerical packages
numpy = ">=2.0,<3.0"
numexpr = "^2.8.1"
pandas = "^2.0"
matplotlib = "^3.7.2"
scipy = [
  { version = ">=1.9,<2.0", python = "<3.11" },
  { version = ">=1.11,<2.0", python = ">=3.11" }
]
nptdms = "^1.7.0"

# image libraries
scikit-image = ">=0.21,<1.0"
opencv-python = "^4.7"
pypng = "^0.20220715.0"
screeninfo = "^0.8.1"

# other
python-dotenv = "^1.0.0"
progressbar2 = "^4.2.0"
mysql-connector-python = "^8.2.0"

# internal libraries
ImageAnalysis = { path = "../ImageAnalysis", develop = true }
geecs_data_utils = { path = "../GEECS-Data-Utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
