[tool.poetry]
name = "geecs-scanner-gui"
version = "0.6.3"
description = ""
authors = ["Christopher Doss <CEDoss@lbl.gov>"]
readme = "README.md"
packages = [{include = "geecs_scanner"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyQt5 = {version = "^5.15.9", markers = "sys_platform == 'win32'" }
pyqt5-tools = {version = "^5.15.9.3.3", markers = "sys_platform == 'win32'" }
geecs-pythonapi = {path = "../GEECS-PythonAPI", develop = true}
pyyaml = "^6.0.2"
pyinstaller = "^6.12.0"
pillow = "^11.1.0"
numexpr = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
