[tool.poetry]
name = "geecs-scanner-gui"
version = "0.7.0"
description = ""
authors = ["Christopher Doss <CEDoss@lbl.gov>"]
readme = "README.md"
packages = [{include = "geecs_scanner"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyQt5 = {version = "^5.15.9", markers = "sys_platform == 'win32'" }
pyqt5-tools = {version = "^5.15.9.3.3", markers = "sys_platform == 'win32'" }
geecs-pythonapi = {path = "../GEECS-PythonAPI", develop = true}
imageanalysis = {path = "../ImageAnalysis", develop = true}
scananalysis = {path = "../ScanAnalysis", develop = true}
geecs_data_utils = { path = "../GEECS-Data-Utils", develop = true }

pyyaml = "^6.0.2"
pyinstaller = "^6.12.0"
pillow = "^11.1.0"
numexpr = "*"
xopt = '^2.6'
simpleaudio = { version = "*", markers = "sys_platform == 'darwin'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
