[tool.poetry]
name = "geecs-schemas"
version = "0.9.0"
description = "Versioned Pydantic schemas for GEECS scanner configs (scan requests, save sets, scan variables, trigger profiles, action plans) plus legacy-YAML converters."
authors = ["Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/GEECS-BELLA/GEECS-Plugins"
repository = "https://github.com/GEECS-BELLA/GEECS-Plugins"
keywords = ["GEECS", "schemas", "pydantic"]

packages = [{ include = "geecs_schemas" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Source (subdir)" = "https://github.com/GEECS-BELLA/GEECS-Plugins/tree/master/GEECS-Schemas"
"Issues" = "https://github.com/GEECS-BELLA/GEECS-Plugins/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# The whole point of this package is to be importable from anywhere —
# engine, GUI, scripts, docs tooling — so it depends on pydantic ONLY.
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
# YAML is serialization, not a runtime dependency: only the tests (fixtures,
# golden files) and path-based converter input need it.
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: walks the sibling GEECS-Plugins-Configs checkout; auto-skips when absent",
]
