[tool.poetry]
name = "geecs-bluesky"
version = "0.9.0"
description = "Bluesky / ophyd-async bridge for the GEECS control system"
authors = ["Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
packages = [{ include = "geecs_bluesky" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
# Pin to the 0.16 API (source() as method, put() with no wait/timeout arg).
# The solver struggles with pydantic-numpy's multi-Python markers; see INSTALL.md
# for the pip-based bootstrap if `poetry install` fails.
ophyd-async = ">=0.16,<1.0"
bluesky = ">=1.12"

# Scan numbering (claim_scan_number) and the Tiled→s-file exporter
# (write_scalar_files_from_tiled) live here; it also supplies pandas/nptdms
# transitively, so they are not pinned separately above.
geecs_data_utils = { path = "../GEECS-Data-Utils", develop = true }

# Note: DB lookup (GeecsDevice.from_db) also requires geecs-pythonapi, but
# that package uses a separate Poetry env (Python <3.12).  Install it manually:
#   pip install -e ../GEECS-PythonAPI
# It is intentionally omitted here to keep the build-system dependency-free.
tiled = {version = ">=0.2", extras = ["client"], optional = true}
mysql-connector-python = "^9.7.0"

[tool.poetry.extras]
tiled = ["tiled"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
