[tool.poetry]
name = "geecs-ca-gateway"
version = "0.1.0"
description = "EPICS Channel Access soft-IOC gateway exposing GEECS devices as PVs"
authors = ["Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
packages = [{ include = "geecs_ca_gateway" }]

[tool.poetry.scripts]
geecs-ca-gateway = "geecs_ca_gateway.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
caproto = ">=1.1"
pydantic = ">=2"
# We depend on the GEECS transport core only — GeecsUdpClient / GeecsTcpSubscriber
# (and FakeGeecsServer for offline tests).  The ophyd-async device layer in
# GeecsBluesky is NOT used here; it comes along transitively but is unused.
# The clean eventual shape is to lift transport/ + db/ into a shared base
# package that both GeecsBluesky and this gateway depend on.
geecs-bluesky = { path = "../GeecsBluesky", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "fake_server: tests that use local FakeGeecsServer TCP/UDP sockets",
]
