[tool.poetry]
name = "geecs-ca-gateway"
version = "0.7.0"
description = "EPICS Channel Access soft-IOC gateway exposing GEECS devices as PVs"
authors = ["Sam Barber <sbarber@lbl.gov>"]
readme = "README.md"
packages = [{ include = "geecs_ca_gateway" }]

[tool.poetry.scripts]
geecs-ca-gateway = "geecs_ca_gateway.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
caproto = ">=1.1"
pydantic = ">=2"
# This package IS the GEECS access layer: the UDP/TCP wire protocol
# (transport/), the experiment database (db/), the PV naming contract
# (pv_naming), and the CA server that mirrors it all as EPICS PVs.
# GeecsBluesky depends on us (library: GeecsDb, pv_naming, exceptions;
# service: the PVs) — never the other way around.
mysql-connector-python = "^9.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default run needs no lab network; the DB integration tests are opt-in.
addopts = "-m 'not integration'"
markers = [
    "fake_server: tests that use local FakeGeecsServer TCP/UDP sockets",
    "integration: tests that touch external lab services such as the GEECS database",
]
