[tool.poetry]
name = "grenouille"
version = "0.1.0"
description = "Analyzes GRENOUILLE (FROG) trace."
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
