[tool.poetry]
name = "imageanalysis"
version = "0.3.0"
description = "Central sub-repository for online and offline analysis of BELLA exeriments' images."
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "image_analysis"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

# numeric libraries
numpy = "^1.21"
scipy = "^1.7"
Pint = ">=0.18,<=0.22"
pyabel = ">=0.9,<1.0"
nptdms = "^1.7.0"
h5py = "*"


# image libraries
pypng = "^0.20220715.0"
imageio = "^2.31.1"
scikit-image = ">=0.19,<1.0"

# other
boto3 = "^1.28"
opencv-python = "^4.9.0.80"
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
