[tool.poetry]
name = "imageanalysis"
version = "1.1.0"
description = "Central sub-repository for online and offline analysis of BELLA exeriments' images."
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "image_analysis"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

# numeric libraries
# numpy - different versions per Python
numpy = [
    { version = ">=1.21,<2.0", python = ">=3.7,<3.9" },   # Legacy numpy for Py 3.7-3.8
    { version = ">=2.0,<3.0", python = ">=3.9" }          # Modern numpy for Py 3.9+
]

# scipy - different versions per Python
scipy = [
    { version = ">=1.7,<1.8", python = ">=3.7,<3.9" },    # Old scipy for Py 3.7-3.8
    { version = ">=1.11,<2.0", python = ">=3.9" }         # Modern scipy for Py 3.9+
]
Pint = ">=0.24,<=0.28"
pyabel = ">=0.9,<1.0"
nptdms = "^1.7.0"
h5py = "*"


# image libraries
pypng = "^0.20220715.0"
imageio = "^2.31.1"
scikit-image = ">=0.19,<1.0"

# other
boto3 = "^1.28"
opencv-python = "^4.9.0.80"
pytest = "^7.4"

lcls-tools = { git  = "https://github.com/slaclab/lcls-tools.git" ,  markers = "python_version >= '3.9'"}
geecs-data-utils = { path = "../GEECS-Data-Utils", markers = "python_version >= '3.10'", develop=true }


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
