[tool.poetry]
name = "imageanalysis"
version = "1.11.1"
description = "Central sub-repository for online and offline analysis of BELLA exeriments' images."
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "image_analysis"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# numeric libraries (Python 3.7-3.10 / numpy 1.x support was dropped; the
# analyzers use numpy 2.0+ APIs such as np.trapezoid, and the integrated
# monorepo environment is Python 3.11)
numpy = ">=2.0,<3.0"
scipy = ">=1.11,<2.0"
pandas = "^2.2.3"
Pint = ">=0.24,<=0.28"

pyabel = ">=0.9.1,<1.0"
nptdms = "^1.7.0"
h5py = "*"


# image libraries
pypng = "^0.20220715.0"
imageio = "^2.31.1"
scikit-image = ">=0.19,<1.0"

# other
boto3 = "^1.28"
opencv-python = "^4.9.0.80"
pytest = ">=7.4"

geecs-data-utils = { path = "../GEECS-Data-Utils", develop=true }


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
